--- a/network/stp.html
+++ b/network/stp.html
@@ -41,7 +41,7 @@
                 <br>
                 <br>
                 <h1>STP (Spanning Tree Protocol)</h1>
-                <p>El Spanning Tree Protocol (STP) es un protocolo de red que evita bucles en redes de capa 2, comunes en configuraciones con múltiples switches y enlaces redundantes. Estos bucles pueden provocar tráfico duplicado, sobrecarga en la red e interrupciones. STP permite a los switches identificar una topología libre de bucles, estableciendo un "árbol de expansión" y desactivando algunos enlaces redundantes.</p>
+                <p>El Spanning Tree Protocol es un protocolo de red que evita bucles en redes de capa 2, comunes en configuraciones con múltiples switches y enlaces redundantes. Estos bucles pueden provocar tráfico duplicado, sobrecarga en la red e interrupciones. STP permite a los switches identificar una topología libre de bucles, estableciendo un "árbol de expansión" y desactivando algunos enlaces redundantes.</p>
                 <h2>Versiones</h2>
                 <p>STP fue inicialmente definido en el estándar IEEE 802.1D. Existen varias versiones que mejoran su velocidad y funcionalidad:</p>
                 <ul>
@@ -107,7 +107,7 @@
                     <img src="media/stp9.jpg" alt="">
                 </div>
                 <h2>Modos</h2>
-                <p>El Spanning Tree Protocol (STP) utiliza varios modos de estado de puerto para gestionar la topología de la red y prevenir bucles. Los estados de los puertos en STP son:</p>
+                <p>El STP utiliza varios modos de estado de puerto para gestionar la topología de la red y prevenir bucles. Los estados de los puertos en STP son:</p>
                 <ol>
                     <li><marcador class="resaltado5">Blocking (Bloqueado)</marcador></li>
                     <ul>
@@ -163,7 +163,7 @@
                     <img src="media/stp4.png" alt="">
                 </div>
                 <h2>Costo</h2>
-                <p>El costo en Spanning Tree Protocol (STP) es un valor que se utiliza para determinar la mejor ruta (o camino) hacia la raíz del árbol de expansión en una red de switches. Este costo se basa en el ancho de banda de los enlaces de red y se utiliza para evitar bucles de red, asegurando que solo una ruta activa se utilice para el tráfico entre dos dispositivos.</p>
+                <p>El costo en STP es un valor que se utiliza para determinar la mejor ruta (o camino) hacia la raíz del árbol de expansión en una red de switches. Este costo se basa en el ancho de banda de los enlaces de red y se utiliza para evitar bucles de red, asegurando que solo una ruta activa se utilice para el tráfico entre dos dispositivos.</p>
                 <p>El costo se calcula a partir del ancho de banda de los enlaces. STP asigna costos predeterminados a diferentes velocidades de enlace, lo que significa que los enlaces de mayor ancho de banda tienen un costo más bajo. Por ejemplo:</p>
                 <ul>
                     <li>10 Mbps: costo 100</li>
