--- a/network.html
+++ b/network.html
@@ -133,6 +133,10 @@
             <img src="media/imagen2.png" alt="STP" class="article-image">
             <h2><a href="network/stp.html">STP</a></h2>
         </div> 
+        <div class="article-section">
+            <img src="media/imagen2.png" alt="HDLC" class="article-image">
+            <h2><a href="network/hdlc.html">HDLC</a></h2>
+        </div> 
         <!-- Nuevo artículo -->
         <div class="article-section">
             <img src="media/imagen2.png" alt="En proceso" class="article-image">
