--- a/network/eigrp.html
+++ b/network/eigrp.html
@@ -220,15 +220,15 @@ router eigrp 1
                 <ol>
                     <li>AS 10:</li>
                     <ul>
-                        <li>R3, R4, y R5 pertenecen al AS 10.</li>
-                        <li>El AS 10 tiene sus propias redes, incluida la red 10.10.10.0/31 que conecta R3, R4, y R5.</li>
-                        <li>R4 y R5 también tienen redes de loopback configuradas para 4.4.4.4/32 y 5.5.5.5/32, respectivamente.</li>
+                        <li style="list-style-type: square;">R3, R4, y R5 pertenecen al AS 10.</li>
+                        <li style="list-style-type: square;">El AS 10 tiene sus propias redes, incluida la red 10.10.10.0/31 que conecta R3, R4, y R5.</li>
+                        <li style="list-style-type: square;">R4 y R5 también tienen redes de loopback configuradas para 4.4.4.4/32 y 5.5.5.5/32, respectivamente.</li>
                     </ul>  
                     <li>AS 20:</li>
                     <ul>
-                        <li>Los routers R1 y R2 tienen interfaces conectadas en la red 20.20.20.0/30.</li>
-                        <li>Cada uno de estos routers tiene también una red de loopback configurada (1.1.1.1/32 para R1 y 2.2.2.2/32 para R2).</li>
-                        <li>EIGRP en AS 20 está configurado en R1, R2, y la interfaz de R3 que conecta con la red 20.20.20.0/30.</li>
+                        <li style="list-style-type: square;">Los routers R1 y R2 tienen interfaces conectadas en la red 20.20.20.0/30.</li>
+                        <li style="list-style-type: square;">Cada uno de estos routers tiene también una red de loopback configurada (1.1.1.1/32 para R1 y 2.2.2.2/32 para R2).</li>
+                        <li style="list-style-type: square;">EIGRP en AS 20 está configurado en R1, R2, y la interfaz de R3 que conecta con la red 20.20.20.0/30.</li>
                     </ul>  
                     <li>R3 actúa como un ASBR (Autonomous System Boundary Router), ya que se conecta tanto al AS 10 como al AS 20, facilitando la comunicación entre los dos sistemas autónomos.</li>
                 </ol>
