--- a/network/hdlc.html
+++ b/network/hdlc.html
@@ -56,7 +56,7 @@
                     <li><marcador class="resaltado6">Multipunto: </marcador>Varios dispositivos conectados en el mismo enlace físico. Se comparten los recursos del medio de transmisión, ideal para redes que no necesitan conexiones dedicadas constantes.</li>
                     <li><marcador class="resaltado6">Conexiones de Circuito Conmutado y Conmutación de Paquetes: </marcador>Basadas en la tecnología de conmutación, donde los paquetes de datos son conmutados en la red para seguir una ruta óptima hasta su destino.</li>
                 </ul>
-                <h2>Estandares</h2>
+                <h2>Características</h2>
                 <p>HDLC se rige por el estándar ISO/IEC 13239. Algunas características técnicas clave de HDLC son:</p>
                 <ul>
                     <li><marcador class="resaltado5">Control de enlace: </marcador>HDLC maneja el control de enlace punto a punto y multipunto.</li>
@@ -118,7 +118,7 @@ Router(config)# exit</code></pre>
                     </div>
                     <div class="codigo-consola">
                         <!-- Contenido del código -->
-<pre><code><Huawei>system-view
+<pre><code>system-view
 [Huawei] interface serial 1/0/0
 [Huawei-Serial1/0/0] link-protocol hdlc
 [Huawei-Serial1/0/0] undo shutdown
