--- a/network/ppp.html
+++ b/network/ppp.html
@@ -49,7 +49,7 @@
                     <li><marcador class="resaltado5">Autenticación: </marcador>Autenticación de tres vías más segura, utilizada para verificar de manera continua la identidad de los dispositivos.</li>
                     <ol>
                         <li><marcador class="resaltado8">PAP (Password Authentication Protocol): </marcador>Método simple de autenticación basado en contraseñas.</li>
-                        <li><marcador class="resaltado8">CHAP (Challenge Handshake Authentication Protocol): </marcador></li>
+                        <li><marcador class="resaltado8">CHAP (Challenge Handshake Authentication Protocol): </marcador>Autenticación de tres vías más segura, utilizada para verificar de manera continua la identidad de los dispositivos.</li>
                     </ol>
                     <li><marcador class="resaltado5">Detección de Errores: </marcador>Utiliza una secuencia de verificación de tramas (FCS) para identificar errores en los datos.</li>
                     <li><marcador class="resaltado5">Multilink PPP (MLPPP): </marcador>Permite la unión de múltiples enlaces físicos en un único enlace lógico, incrementando el ancho de banda disponible.</li>
