--- a/network/ppp.html
+++ b/network/ppp.html
@@ -111,7 +111,7 @@ Router(config-if)# exit
 Router(config)# write memory</code></pre>
                     </div>
                 </div>
-                <p>En el dispositivo remoto también debe estar configurado para usar el mismo método de autenticación (PAP o CHAP) y que las credenciales sean correctas.</p>
+                <p>En el dispositivo remoto también debe estar configurado para usar el mismo método de autenticación (PAP o CHAP) y las credenciales deben ser correctas.</p>
                 <h3>Cisco con autenticación CHAP o PAP</h3>
                 <div class="consola">
                     <div class="barra-superior-consola">
@@ -147,7 +147,7 @@ Router(config)# write memory</code></pre>
 [RouterA-Serial0/0/0] ppp pap local-user RouterB password simple contraseña_compartida</code></pre>
                     </div>
                 </div>
-                <p>En el dispositivo remoto también debe estar configurado para usar el mismo método de autenticación (PAP o CHAP) y que las credenciales sean correctas.</p>
+                <p>En el dispositivo remoto también debe estar configurado para usar el mismo método de autenticación (PAP o CHAP) y las credenciales deben ser correctas.</p>
                 <h3>Huawei con autenticación CHAP o PAP</h3>
                 <div class="consola">
                     <div class="barra-superior-consola">
