--- a/network/ppp.html
+++ b/network/ppp.html
@@ -42,7 +42,7 @@
                 <br>
                 <h1>PPP (Point-to-Point Protocol)</h1>
                 <p>El Protocolo Punto a Punto (PPP) es un protocolo de enlace de datos ampliamente utilizado en redes WAN para establecer conexiones directas entre dos nodos de red. Desarrollado para soportar conexiones seriales, PPP es preferido sobre HDLC cuando se necesita compatibilidad entre diferentes fabricantes, ya que es un estándar abierto. Además, PPP proporciona autenticación, compresión de datos y detección de errores, lo que lo convierte en una opción versátil para conexiones WAN.</p>
-                <p>Características</p>
+                <h2>Características</h2>
                 <p>PPP está definido en el RFC 1661 y proporciona diversas características:</p>
                 <ul>
                     <li><marcador class="resaltado5">Encapsulación de Datos: </marcador>PPP encapsula los paquetes de datos en tramas y soporta múltiples protocolos de red como IP y IPX.</li>
