--- a/network/ppp.html
+++ b/network/ppp.html
@@ -99,7 +99,7 @@
                     </div>
                     <div class="codigo-consola">
                         <!-- Contenido del código -->
-<pre><code><Huawei>Router> enable
+<pre><code>Router> enable
 Router# configure terminal
 Router(config)# interface serial 0/0/0
 Router(config-if)# encapsulation ppp
@@ -119,7 +119,7 @@ Router(config)# write memory</code></pre>
                     </div>
                     <div class="codigo-consola">
                         <!-- Contenido del código -->
-<pre><code><Huawei>Router> enable
+<pre><code>Router> enable
 Router# configure terminal
 Router(config)# interface serial 0/0/0
 Router(config-if)# encapsulation ppp
