--- a/network.html
+++ b/network.html
@@ -141,6 +141,14 @@
             <img src="media/imagen2.png" alt="PPP" class="article-image">
             <h2><a href="network/ppp.html">PPP</a></h2>
         </div> 
+        <div class="article-section">
+            <img src="media/imagen2.png" alt="ACL" class="article-image">
+            <h2><a href="network/acl.html">ACL</a></h2>
+        </div> 
+        <div class="article-section">
+            <img src="media/imagen2.png" alt="NAT" class="article-image">
+            <h2><a href="network/nat.html">NAT</a></h2>
+        </div> 
         <!-- Nuevo artículo -->
         <div class="article-section">
             <img src="media/imagen2.png" alt="En proceso" class="article-image">
