--- a/network/acl.html
+++ b/network/acl.html
@@ -41,7 +41,7 @@
                 <br>
                 <br>
                 <h1>ACL (Access Control List)</h1>
-                <p>Las Listas de Control de Acceso (ACLs, por sus siglas en inglés) son una herramienta fundamental en el mundo de las redes para gestionar la seguridad y el flujo de tráfico entre dispositivos de red. Las ACLs son conjuntos de reglas que permiten o deniegan el paso de tráfico basado en diversos criterios, tales como la dirección IP, el protocolo y el puerto utilizado. A continuación, desglosamos los conceptos principales y las funciones de las ACLs, los puertos y protocolos más comunes en su configuración, y otros protocolos en los que es habitual aplicarlas.</p>
+                <p>Las Listas de Control de Acceso (ACLs, por sus siglas en inglés) son una herramienta fundamental en el mundo de las redes para gestionar la seguridad y el flujo de tráfico entre dispositivos de red.</p>
                 <p>Una ACL es un conjunto de instrucciones en los dispositivos de red (como routers y switches) que define qué tráfico es permitido o denegado al atravesar el dispositivo. Estas instrucciones son reglas que filtran el tráfico basándose en características específicas de los paquetes, tales como la dirección IP de origen o destino, el protocolo (como TCP o UDP) y los números de puerto. Las ACLs pueden aplicarse en diferentes puntos de la red para proteger y controlar el tráfico, asegurando que solo los paquetes autorizados ingresen o salgan de ciertas interfaces.</p>
                 <div class="blog-image-grande">
                     <img src="media/acl10.jpg" alt="">
@@ -59,7 +59,7 @@
                     </ul>
                     <li><marcador class="resaltado9">Número de Secuencia</marcador></li>
                     <ul>
-                        <li>Las entradas en una ACL suelen tener un número de secuencia que determina el orden en que se evalúan. La primera coincidencia se aplica, por lo que el orden es crucial.</li>
+                        <li>Las entradas en una ACL suelen tener un número de secuencia que determina el orden en que se evalúan.</li>
                         <p>Cuando se evalúan los paquetes contra las entradas de una ACL, el orden de las reglas es crucial. La primera regla que coincida con el paquete determina la acción que se tomará, ya sea permitir (allow) o denegar (deny). Esto significa que, si hay dos reglas que podrían aplicarse a un paquete, la acción de la primera regla que coincida se ejecutará, ignorando las reglas posteriores.</p>
                     </ul>
                     <li><marcador class="resaltado9">Tipo de ACL</marcador></li>
